gcc/testsuite/rust/rustc/ui/issues/issue-30236.rs
type Foo<
    Unused // { dg-error ".E0091." "" { target *-*-* } }
    > = u8;

fn main() {

}

